examples/neg/parsing/missing-terminator.effekt
def helloWorld() = {
  def foo() = println("hello") def bar() = println("goodbye")
  foo(); bar()
}